--- a/src/app/Components/card-viewer/card-viewer.component.scss
+++ b/src/app/Components/card-viewer/card-viewer.component.scss
@@ -26,8 +26,41 @@ h1 {
 }
 
 .checks {
-  font-size: larger;
+  font-size : larger;
+  text-align: center;
 }
+
+.check {
+  display: inline;
+  margin : 1rem;
+}
+
+ul.nav {
+  padding-left    : 0px;
+  background-color: #3D99CE;
+  text-align      : center;
+}
+
+ul.nav>li {
+  display: inline-block;
+  padding: 10px 20px;
+}
+
+ul.nav>li:hover {
+  background-color: #2779BF;
+}
+
+ul.nav>li>a {
+  color          : white;
+  text-decoration: none;
+}
+
+
+
+
+
+/*
+
 
 ul.horizList {
   list-style: none;
@@ -48,3 +81,4 @@ unused input[type="number"] {
   width    : 5rem;
   font-size: 100px;
 }
+*/
