--- a/src/app/Components/dataset-viewer/dataset-viewer.component.html
+++ b/src/app/Components/dataset-viewer/dataset-viewer.component.html
@@ -1,4 +1,7 @@
 <h1>Data Set Viewer -- Disaster Declarations Summary</h1>
+
+
+<!-- TODO:  https://angular.io/api/common/NgIf#shorthand-syntax shows LOADING page logic -->
 <article>
   <ng-container *ngIf="disasterDeclarationsSummaries; else ItsNull">
 
