a bit of wordsmithing...

--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -9,12 +9,25 @@
 </div -->
 
 <footer class="footer">
-<hr>
-<div>openFemaNgClient ֍ Version {{version}}</div>
-<br>
-<div>eoc.online™ provides open-source tools for Emergency Operations Centers and local CERT/VOAD/Citizen Corps groups. For more information check out <a href="https://eoc.online" target="_blank">https://eoc.online  - Open Source Tools for EOCs</a>.</div>
-<br>
-<div>We'd love to get your reports of use and suggestions for enhancement. To report issues please visit <a href="https://github.com/EOCOnline/OpenFemaNgClient/issues/" target="_blank">https://github.com/EOCOnline/OpenFemaNgClient/issues/</a></div>
+  <hr>
+  <div>openFemaNgClient ֍ Version {{version}}</div>
+  <br>
+  <div>openFemaNgClient is an Angular (aka Ng) & Typescript (thus ubiqitious JavaScript) browser-only application that
+    provides an example for accessing one (currently) of the <a
+      href="https://www.fema.gov/about/reports-and-data/openfema" target="blank"
+      title=" https://www.fema.gov/about/reports-and-data/openfema">OpenFEMA datasets</a>. A working version/demo is at:
+    <a href="http://eocsw.org" target="_blank" title="http://eocsw.org">http://eocsw.org</a>. (No $ to make it a https
+    (secure) site for now.) Initially this is a proof of concept, with encouragement it could be fortified into an
+    enterprise ready tool!
+  </div>
+  <br>
+  <div>eoc.online™ provides open-source tools for Emergency Operations Centers and local CERT/VOAD/Citizen Corps groups.
+    For more information check out <a href="https://eoc.online" target="_blank">https://eoc.online - Open Source Tools
+      for EOCs</a>.</div>
+  <br>
+  <div>We'd love to get your reports of use and suggestions for enhancement. To report issues please visit <a
+      href="https://github.com/EOCOnline/OpenFemaNgClient/issues/"
+      target="_blank">https://github.com/EOCOnline/OpenFemaNgClient/issues/</a></div>
 </footer>
 <br>
 <div class="copyLeft">©2022 eoc.online, under the MIT License</div>
