--- a/src/app/Components/card-viewer/card-viewer.component.html
+++ b/src/app/Components/card-viewer/card-viewer.component.html
@@ -2,6 +2,7 @@
 
 <div class="checks">
   <ul class="horizList">
+    Disaster Types to Display:
     <span *ngFor="let type of types">
       <li class="check" (click)="onChanged(type.type)"><input type="checkbox" attr.id='{{type.type}}' checked="true">
         <label> {{type.type}}</label>
