--- a/src/app/Components/details/details.component.scss
+++ b/src/app/Components/details/details.component.scss
@@ -1,19 +1,20 @@
 .details-panel {
   display: flex;
   padding: 10px;
-  gap: 50px;
+  gap    : 50px;
 }
+
 .main-img {
   border-radius: 10px;
-  width: 400px;
+  width        : 400px;
 }
-.main-text {
-  font-size: 34pt;
+
+h1 {
+  font-size    : 20pt;
   margin-bottom: 20px;
+  margin-left  : 2rem;
 }
+
 .emphasize {
   font-weight: bold;
-}
-h2 {
-
 }
