Clean up h1 & h2 & page headings

--- a/src/app/Components/dataset-viewer/dataset-viewer.component.html
+++ b/src/app/Components/dataset-viewer/dataset-viewer.component.html
@@ -1,4 +1,4 @@
-<h1>Data Set Viewer -- Disaster Declarations Summary</h1>
+<h1>List View</h1>
 
 
 <!-- TODO:  https://angular.io/api/common/NgIf#shorthand-syntax shows LOADING page logic -->
