--- a/src/app/Components/details/details.component.html
+++ b/src/app/Components/details/details.component.html
@@ -1,4 +1,4 @@
-<h1>Detailed View of Disaster Declaration</h1>
+<h1>Detailed View</h1>
 <!-- h3 class="dataset-head">{{disaster.femaDeclarationString}}: &nbsp;&nbsp; {{disaster.declarationTitle}}</h3 -->
 
 <article class="details-panel" *ngIf="(summary$ | async) as summary">
