--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -10,7 +10,7 @@
 
 <footer class="footer">
   <hr>
-  <div>openFemaNgClient ֍ Version {{version}}</div>
+  <h2>openFemaNgClient ֍ Version {{version}}</h2>
   <br>
   <div>openFemaNgClient is an Angular (aka Ng) & Typescript (thus ubiqitious JavaScript) browser-only application that
     provides an example for accessing one (currently) of the <a
