--- a/src/app/Components/dataset-grid/dataset-grid.component.html
+++ b/src/app/Components/dataset-grid/dataset-grid.component.html
@@ -1,4 +1,4 @@
-<h1>Dataset Grid View</h1>
+<h1>Grid View</h1>
 
 <div id="reportsgrid">
   <ag-grid-angular #reportsGrid rowAnimation style="width: 100%; height: 60vh;" (gridReady)="onGridReady($event)"
