unable to find key to selecting ag-paging-panel...

--- a/src/app/Components/dataset-grid/dataset-grid.component.scss
+++ b/src/app/Components/dataset-grid/dataset-grid.component.scss
@@ -10,3 +10,11 @@
   text-align   : center;
   //margin-left: 2vw;
 }
+
+
+.ag-paging-panel {
+  //justify-content : center !important;
+  //align-items     : center !important;
+  //display         : flex !important;
+  background-color: aqua;
+}
