--- a/src/app/Components/dataset-grid/dataset-grid.component.html
+++ b/src/app/Components/dataset-grid/dataset-grid.component.html
@@ -2,12 +2,10 @@
 
 <div id="reportsgrid">
   <ag-grid-angular #reportsGrid rowAnimation style="width: 100%; height: 60vh;" (gridReady)="onGridReady($event)"
-    [gridOptions]="gridOptions" class="ag-theme-alpine" [rowData]="rowData" [columnDefs]="columnDefs"
+    [gridOptions]="gridOptions" class="ag-theme-alpine test" [rowData]="rowData" [columnDefs]="columnDefs"
     [tooltipShowDelay]="500">
     <!--
-[defaultColDef]="defaultColDef"
-
-
+      class="text-center"
     was :  [rowData]="fieldReports.fieldreportArray | async"
     (firstDataRendered)="onFirstDataRendered($event)"
     (gridReady)="onGridReady($event)" // See https://www.ag-grid.com/angular-data-grid/grid-interface/#access-the-grid--column-api-1
