--- a/src/app/Components/list/list.component.html
+++ b/src/app/Components/list/list.component.html
@@ -16,7 +16,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp; Date: {{disaster.declarationDate | date:'mediumDate'}};
         <br>
         -->
-      <app-dataset-card [disaster]=disaster [index]=i></app-dataset-card>
+      <list-item [disaster]=disaster [index]=i></list-item>
     </span>
     <!-- /li>
     </ul -->
