--- a/src/app/Components/list-item/list-item.component.html
+++ b/src/app/Components/list-item/list-item.component.html
@@ -1,4 +1,4 @@
-<article class="dataset-card">
+<article class="list-card">
   <span class="item" [ngStyle]="{'background-color':
     (disaster.incidentType == 'Coastal Storm') ? '#80DEEA':
     (disaster.incidentType == 'Earthquake') ? '#FFFF00':
@@ -12,16 +12,16 @@
     (disaster.incidentType == 'Other') ? '#EEEEEE':
     null}">
     {{index}} - {{disaster.incidentType}}</span>
-  <h3 class="dataset-head">{{disaster.femaDeclarationString}}: &nbsp;&nbsp; {{disaster.declarationTitle}}</h3>
-  <!-- div class="dataset-subhead"></div -->
+  <h3 class="list-head">{{disaster.femaDeclarationString}}: &nbsp;&nbsp; {{disaster.declarationTitle}}</h3>
+  <!-- div class="list-subhead"></div -->
 
-  <div class="dataset-location">{{disaster.designatedArea}}, {{disaster.state}} {{disaster.placeCode}}</div>
-  <span class="dataset-date">{{disaster.incidentBeginDate | date: 'shortDate' }} to
+  <div class="list-location">{{disaster.designatedArea}}, {{disaster.state}} {{disaster.placeCode}}</div>
+  <span class="list-date">{{disaster.incidentBeginDate | date: 'shortDate' }} to
     {{disaster.incidentEndDate | date: 'shortDate'}}; closed {{disaster.disasterCloseoutDate | date:
     'shortDate'}}</span>
 
-  <div class="dataset-description">FIPS: {{disaster.fipsCountyCode}} & {{disaster.fipsStateCode}}; Request
+  <div class="list-description">FIPS: {{disaster.fipsCountyCode}} & {{disaster.fipsStateCode}}; Request
     # {{disaster.declarationRequestNumber}}</div>
 
-  <div class="dataset-details"><a href="/details/{{index}}">See all detail fields</a></div>
+  <div class="list-details"><a href="/details/{{index}}">See all detail fields</a></div>
   <article>
