try styling <hr>

--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,13 +1,3 @@
-<!-- https://nikitahl.com/horizontal-rule-css -->
-
-<!-- div class="list">
-  <ul>
-    <li *ngFor="let item of collection | paginate: { itemsPerPage: 10, currentPage: page }">{{ item }}</li>
-  </ul>
-
-  <pagination-controls (pageChange)="page = $event"></pagination-controls>
-</div -->
-
 <footer class="footer">
   <hr>
   <h2>openFemaNgClient ֍ Version {{version}}</h2>
@@ -15,7 +5,8 @@
   <div>openFemaNgClient is an Angular (aka Ng) & Typescript (thus ubiqitious JavaScript) browser-only application that
     provides an example for accessing one (currently) of the <a
       href="https://www.fema.gov/about/reports-and-data/openfema" target="blank"
-      title=" https://www.fema.gov/about/reports-and-data/openfema">OpenFEMA datasets</a>. A working version/demo is at:
+      title=" https://www.fema.gov/about/reports-and-data/openfema">OpenFEMA datasets</a>. A working version/demo is
+    (planned for now!) at:
     <a href="http://eocsw.org" target="_blank" title="http://eocsw.org">http://eocsw.org</a>. (No $ to make it a https
     (secure) site for now.) Initially this is a proof of concept, with encouragement it could be fortified into an
     enterprise ready tool!
