--- a/src/styles.scss
+++ b/src/styles.scss
@@ -157,5 +157,30 @@ h2 {
   font-family: Sniglet, "Baloo 2", "Open Sans", Helvetica, sans-serif;
 }
 
+// https://nikitahl.com/horizontal-rule-css
+hr_unused {
+  border          : 3px;
+  height          : 1px;
+  background-image: linear-gradient (to right, rgba(0, 0, 0, 0), rgb(237, 178, 100), rgba(0, 0, 0, 0));
+}
+
+hr {
+  border         : 1px solid cornflowerblue;
+  position       : relative;
+  display        : flex;
+  justify-content: center;
+}
+
+// BUG: Doesn't work...
+hr::before {
+  content   : 'openFemaNgClient';
+  position  : absolute;
+  height    : 20px;
+  width     : 20px;
+  font-size : 20px;
+  background: white;
+}
+
+
 @import 'ag-grid-community/dist/styles/ag-grid.css';
 @import 'ag-grid-community/dist/styles/ag-theme-alpine.css';
