navbar styling & rename map

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -20,6 +20,7 @@
   <a href="/list">List View</a>
   <a href="/card">Card View</a>
   <a href="/grid">Grid View</a>
+  <a href="/map">Map View</a>
   <nav>
     <!-- ul>
     <li>
@@ -43,6 +44,6 @@
     <span class="rightAlign">
       <a href=" https://github.com/EOCOnline/openFemaNgClient" target="_blank"
         title="See ya at GitHub for issue reports & source code" class="git">
-        <img src="../assets/icons/GitHub-Mark-32px.png" id="gitLogo" /></a>
+        <img src="../assets/icons/GitHub-Mark-32px.png" id="gitLogo" />GitHub</a>
     </span>
   </nav>
