More card-ish view & rename details to detail-view

--- a/src/app/Components/list-item/list-item.component.html
+++ b/src/app/Components/list-item/list-item.component.html
@@ -1,27 +1,21 @@
-<article class="list-card">
-  <span class="item" [ngStyle]="{'background-color':
-    (disaster.incidentType == 'Coastal Storm') ? '#80DEEA':
-    (disaster.incidentType == 'Earthquake') ? '#FFFF00':
-    (disaster.incidentType == 'Fire') ? '#FF6E40':
-    (disaster.incidentType == 'Flood') ? '#8C9EFF':
-    (disaster.incidentType == 'Hurricane') ? '#CE93D8':
-    (disaster.incidentType == 'Severe Ice Storm') ? '#B2EBF2':
-    (disaster.incidentType == 'Severe Storm') ? 'lightblue':
-    (disaster.incidentType == 'Snowstorm') ? '#E0E0E0':
-    (disaster.incidentType == 'Tornado') ? '#E1BEE7':
-    (disaster.incidentType == 'Other') ? '#EEEEEE':
-    null}">
-    {{index}} - {{disaster.incidentType}}</span>
-  <h3 class="list-head">{{disaster.femaDeclarationString}}: &nbsp;&nbsp; {{disaster.declarationTitle}}</h3>
-  <!-- div class="list-subhead"></div -->
+<article class="list-item">
+  <span class="title">{{index}} - {{disaster.incidentType}}</span>
+
+  <h3 class="list-head" [ngStyle]="calcBackgroundColor(disaster.incidentType)">{{disaster.femaDeclarationString}}:
+    &nbsp;&nbsp;
+    {{disaster.declarationTitle}}</h3>
 
   <div class="list-location">{{disaster.designatedArea}}, {{disaster.state}} {{disaster.placeCode}}</div>
-  <span class="list-date">{{disaster.incidentBeginDate | date: 'shortDate' }} to
-    {{disaster.incidentEndDate | date: 'shortDate'}}; closed {{disaster.disasterCloseoutDate | date:
-    'shortDate'}}</span>
 
-  <div class="list-description">FIPS: {{disaster.fipsCountyCode}} & {{disaster.fipsStateCode}}; Request
-    # {{disaster.declarationRequestNumber}}</div>
 
-  <div class="list-details"><a href="/details/{{index}}">See all detail fields</a></div>
+  <details>
+    <summary>More Details <span class="list-details"><a href="/details/{{index}}">All details</a></span></summary>
+    <span class="list-date">{{disaster.incidentBeginDate | date: 'shortDate' }} to
+      {{disaster.incidentEndDate | date: 'shortDate'}}; closed {{disaster.disasterCloseoutDate | date:
+      'shortDate'}}</span>
+    <div class="list-description">FIPS: {{disaster.fipsCountyCode}} & {{disaster.fipsStateCode}}; Request
+      # {{disaster.declarationRequestNumber}}</div>
+  </details>
+  <!-- div class="list-subhead"></div -->
+
   <article>
