--- a/src/app/Components/list-view/list-view.component.scss
+++ b/src/app/Components/list-view/list-view.component.scss
@@ -1,9 +1,9 @@
 article {
-  margin-left   : 10px;
-  font-size     : small;
-  display       : flex;
-  flex-direction: row;
-  flex-wrap     : wrap;
+  margin            : 1rem;
+  font-size         : small;
+  //  display       : flex;
+  //  flex-direction: row;
+  //  flex-wrap     : wrap;
 }
 
 .text-center {
