--- a/src/app/Components/detail-view/detail-view.component.html
+++ b/src/app/Components/detail-view/detail-view.component.html
@@ -1,13 +1,26 @@
-<h1>Detailed View</h1>
-<!-- h3 class="dataset-head">{{disaster.femaDeclarationString}}: &nbsp;&nbsp; {{disaster.declarationTitle}}</h3 -->
+<h1>Detailed View for {{index}}</h1>
 
-<article class="details-panel" *ngIf="(summary$ | async) as summary">
-  <!--img class="main-img" src="{{summary.photoUrl}}" alt="Photo of {{summary.name}}"-->
+<!-- h3 class="dataset-head">{{disaster.femaDeclarationString}}: &nbsp;&nbsp; {{disaster.declarationTitle}}</h3
+-->
+
+<!-- article class="details-panel" *ngIf="(summary$ | async) as summary" -->
+<!-- article *ngIf="gotData" class="details-panel"-->
+<article class="detail-panel">
+  <span class="detail-item">{{index}} - disaster.incidentType</span>
+
+  <h3 class="detail-head" [ngStyle]="calcBackgroundColor(disaster.incidentType)">
+    {{disaster.femaDeclarationString}}: &nbsp;&nbsp; {{disaster.declarationTitle}}
+  </h3>
+  222222
+  <!-- div class="detail-subhead"></div -->
+
+  <div class="detail-location">{{disaster.designatedArea}}, {{disaster.state}} {{disaster.placeCode}}23232323</div>
+  33333
+  <span class="detail-date">{{disaster.incidentBeginDate | date: 'shortDate' }} to
+    {{disaster.incidentEndDate | date: 'shortDate'}}; closed {{disaster.disasterCloseoutDate | date:
+    'shortDate'}}</span>
+
+  <div class="detail-description">FIPS: {{disaster.fipsCountyCode}} & {{disaster.fipsStateCode}}; Request
+    # {{disaster.declarationRequestNumber}}</div>
+
   <article>
-    <h1 class="main-text">Hi, I'm {{summary.disasterNumber}} -- {{summary.declarationTitle}}</h1>
-    <h2>My request # is <span class="emphasize">{{summary.declarationRequestNumber}} of type
-        {{summary.declarationType}}</span></h2>
-    <p>{{summary.incidentBeginDate}} to {{summary.incidentEndDate}}</p>
-    <p>I live in <span class="emphasize">{{summary.state}} at zip {{summary.fipsCountyCode}}</span></p>
-  </article>
-</article>
