--- a/src/app/Components/detail-view/detail-view.component.scss
+++ b/src/app/Components/detail-view/detail-view.component.scss
@@ -1,14 +1,17 @@
-.details-panel {
-  display: flex;
-  padding: 10px;
-  gap    : 50px;
+.detail-panel {
+  // display: flex;
+  padding  : 1rem;
+  //gap    : 50px;
 }
 
-.main-img {
-  border-radius: 10px;
-  width        : 400px;
+.detail-item {
+  background-color: aliceblue;
 }
 
-.emphasize {
-  font-weight: bold;
+.detail-head,
+.detail-subhead,
+.detail-location,
+.detail-date,
+.detail-description {
+  font-size: large;
 }
