--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -2,14 +2,14 @@
   <hr>
   <h2>openFemaNgClient ֍ Version {{version}}</h2>
   <br>
-  <div>openFemaNgClient is an Angular (aka Ng) & Typescript (thus ubiqitious JavaScript) browser-only application that
-    provides an example for accessing one (currently) of the <a
+  <div>openFemaNgClient is an Angular (aka Ng) & Typescript (thus ubiqitious JavaScript) browser-only client
+    application to provide an example for accessing one (currently) of the <a
       href="https://www.fema.gov/about/reports-and-data/openfema" target="blank"
       title=" https://www.fema.gov/about/reports-and-data/openfema">OpenFEMA datasets</a>. A working version/demo is
-    (planned for now!) at:
+    (planned for now) at:
     <a href="http://eocsw.org" target="_blank" title="http://eocsw.org">http://eocsw.org</a>. (No $ to make it a https
     (secure) site for now.) Initially this is a proof of concept, with encouragement it could be fortified into an
-    enterprise ready tool!
+    enterprise ready tool.
   </div>
   <br>
   <div>eoc.online™ provides open-source tools for Emergency Operations Centers and local CERT/VOAD/Citizen Corps groups.
@@ -21,5 +21,5 @@
       target="_blank">https://github.com/EOCOnline/OpenFemaNgClient/issues/</a></div>
 </footer>
 <br>
-<div class="copyLeft">©2022 eoc.online, under the MIT License</div>
+<div class="copyLeft"><a href="https://eoc.online" target="_blank">©2022 eoc.online, under the MIT License</a></div>
 <br>
