chg from indexOnPage to absolute index

--- a/src/app/Components/card-view/card-view.component.html
+++ b/src/app/Components/card-view/card-view.component.html
@@ -14,7 +14,7 @@
 <div class="content">
   <!-- LENGTH={{disasterDeclarationsSummaries.length}}<br -->
   <div *ngFor="let disaster of filteredDisasterDeclarationsSummaries | paginate: config; index as i">
-    <card [disaster]=disaster [index]=i></card>
+    <card [disaster]=disaster [index]=absoluteIndex(i)></card>
     <!-- card [disaster]=disaster [index]=i *ngIf="filterBy(disaster.incidentType)"></card -->
   </div>
 </div>
