--- a/src/app/Components/detail-view/detail-view.component.html
+++ b/src/app/Components/detail-view/detail-view.component.html
@@ -26,9 +26,9 @@
   <br>
   <hr>
   <br>
-  <h4>Authoritative definitions of these fields: <a
+  <h3>Authoritative field definitions: &nbsp;<a
       href="https://www.fema.gov/openfema-data-page/disaster-declarations-summaries-v2"
-      target="_blank">https://www.fema.gov/openfema-data-page/disaster-declarations-summaries-v2</a></h4>
+      target="_blank">https://www.fema.gov/openfema-data-page/disaster-declarations-summaries-v2</a></h3>
   <br>
 
   <div class="listing">
