Start putting common code into Common

--- a/src/app/Components/card/card.component.html
+++ b/src/app/Components/card/card.component.html
@@ -1,7 +1,8 @@
 <article class="card">
   <span class="item">
     {{index}} - {{disaster.incidentType}}</span>
-  <h3 class="card-head" [ngStyle]="calcBackgroundColor(disaster.incidentType)">{{disaster.femaDeclarationString}}:
+  <h3 class="card-head" [ngStyle]="calcBackgroundColor(disaster.incidentType)">
+    {{disaster.femaDeclarationString}}:
     &nbsp;&nbsp;
     {{disaster.declarationTitle}}</h3>
   <!-- div class="card-subhead"></div -->
