Add map componeent

--- a/src/app/Components/map-view/map-view.component.html
+++ b/src/app/Components/map-view/map-view.component.html
@@ -1,3 +1,14 @@
 <h1>Map View</h1>
 
-[Future!]
+<map></map>
+
+<!--article>
+  <ng-container *ngIf="disasterDeclarationsSummaries; else ItsNull">
+    <span *ngFor="let disaster of disasterDeclarationsSummaries | paginate: config; index as i">
+      <br>
+      <list-item [disaster]=disaster [index]=absoluteIndex(i)> </list-item>
+    </span>
+  </ng-container>
+
+  <ng-template #ItsNull>Whoops: disasterDeclarationsSummaries is null!</ng-template>
+</article -->
