--- a/src/app/Components/map-view/map-view.component.html
+++ b/src/app/Components/map-view/map-view.component.html
@@ -1,6 +1,7 @@
 <h1>Map View</h1>
 
-<map></map>
+<map [disasters]=disasterDeclarationsSummary></map>
+<map [disasterDeclarationsSummary]=disasters></map>
 
 <!--article>
   <ng-container *ngIf="disasterDeclarationsSummaries; else ItsNull">
