Add a bunch of icons

--- a/src/app/Components/map/map.component.html
+++ b/src/app/Components/map/map.component.html
@@ -1,8 +1,13 @@
 <h1>Map View</h1>
 
-<google-map id="map" width="100%" [options]="mapOptions" (mapInitialized)="onMapInitialized($event)">
+<map id="map" width="100%" [options]="mapOptions" (mapInitialized)="onMapInitialized($event)">
   <div id="markerDiv" #markerDiv *ngFor="let marker of markers"></div>
-</google-map>
+</map>
+
+<span class="material-symbols-outlined">
+  landslide
+</span>
+ebd7
 
 <!--
 
