--- a/src/app/Components/map/map.component.scss
+++ b/src/app/Components/map/map.component.scss
@@ -52,3 +52,11 @@
   margin-right: 10px;
   margin-left : 30vw;
 }
+
+.material-symbols-outlined {
+  font-variation-settings:
+    'FILL'0,
+    'wght'400,
+    'GRAD'0,
+    'opsz'48
+}
