rough editing on map is (maybe) done...

--- a/src/app/Components/card/card.component.html
+++ b/src/app/Components/card/card.component.html
@@ -1,7 +1,7 @@
 <article class="card">
   <span class="item">
     {{index}} - {{disaster.incidentType}}</span>
-  <h3 class="card-head" [ngStyle]="calcBackgroundColor(disaster.incidentType)">
+  <h3 class="card-head" [ngStyle]="getDisasterColorStyle(disaster.incidentType)">
     {{disaster.femaDeclarationString}}:
     &nbsp;&nbsp;
     {{disaster.declarationTitle}}</h3>
