--- a/src/app/Components/detail-view/detail-view.component.html
+++ b/src/app/Components/detail-view/detail-view.component.html
@@ -9,7 +9,7 @@
 
   <span class="detail-item">{{index}} - {{disaster.incidentType}}</span>
 
-  <h3 class="detail-head" [ngStyle]="calcBackgroundColor(disaster.incidentType)">
+  <h3 class="detail-head" [ngStyle]="getDisasterColorStyle(disaster.incidentType)">
     {{disaster.femaDeclarationString}}: &nbsp;&nbsp; {{disaster.declarationTitle}}
   </h3>
   <!-- div class="detail-subhead"></div -->
