--- a/src/app/Components/list-item/list-item.component.html
+++ b/src/app/Components/list-item/list-item.component.html
@@ -1,7 +1,7 @@
 <article class="list-item">
   <span class="title">{{index}} - {{disaster.incidentType}}</span>
 
-  <h3 class="list-head" [ngStyle]="calcBackgroundColor(disaster.incidentType)">{{disaster.femaDeclarationString}}:
+  <h3 class="list-head" [ngStyle]="getDisasterColorStyle(disaster.incidentType)">{{disaster.femaDeclarationString}}:
     &nbsp;&nbsp;
     {{disaster.declarationTitle}}</h3>
 
