still lots of errors

--- a/src/app/Components/map/map.component.html
+++ b/src/app/Components/map/map.component.html
@@ -1,6 +1,8 @@
 <h1>Map View</h1>
 
-<google-map id="map" width="100%" [options]="mapOptions" (mapInitialized)="onMapInitialized($event)">
+<!-- google-map id="map" width="100%" [options]="mapOptions" (mapInitialized)="onMapInitialized($event)"-->
+
+<google-map>
   <div id="markerDiv" #markerDiv *ngFor="let marker of markers"></div>
 </google-map>
 
