--- a/src/app/Components/map/map.component.html
+++ b/src/app/Components/map/map.component.html
@@ -2,7 +2,7 @@
 
 <!-- google-map id="map" width="100%" [options]="mapOptions" (mapInitialized)="onMapInitialized($event)"-->
 
-<google-map>
+<!--google-map>
   <div id="markerDiv" #markerDiv *ngFor="let marker of markers"></div>
 </google-map>
 
